edited assets for web page/app

--- a/web/index.html
+++ b/web/index.html
@@ -117,7 +117,7 @@
     </main>
 
     <footer>
-      Crafted with ❤️, NumPy, and heaps of holiday cheer.
+      Created by Abril, Magtibay, Tamboong, & Villaflor with heaps of holiday cheer. Advance Merry Christmas! 🎄
     </footer>
     <script src="/static/app.js" type="module"></script>
   </body>
